[gd_scene load_steps=7 format=3 uid="uid://dtm4ykqtxxoxh"]

[ext_resource type="Script" path="res://addons/Godautdio/editor/stream_field.gd" id="1_px43p"]
[ext_resource type="Texture2D" uid="uid://8pcby52mufua" path="res://addons/Godautdio/icons/AudioStream.svg" id="2_mqqsk"]
[ext_resource type="Texture2D" uid="uid://bm6bgqchll4ug" path="res://addons/Godautdio/icons/icon_search.svg" id="3_pbq54"]
[ext_resource type="Script" path="res://addons/Godautdio/editor/drop_assign_button.gd" id="4_y74ps"]
[ext_resource type="Texture2D" uid="uid://yps710b0ao6a" path="res://addons/Godautdio/icons/icon_play.svg" id="5_7xhud"]
[ext_resource type="Texture2D" uid="uid://drqq4rv2ymr7a" path="res://addons/Godautdio/icons/Remove.svg" id="5_jqkin"]

[node name="StreamField" type="HFlowContainer" node_paths=PackedStringArray("weight_slider", "weight_input", "path_input")]
offset_right = 679.0
offset_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_px43p")
weight_slider = NodePath("VBoxContainer/HFlowContainer2/WeightSlider")
weight_input = NodePath("VBoxContainer/HFlowContainer2/WeightInput")
path_input = NodePath("VBoxContainer/HFlowContainer/clipFilePathLineEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="clipFilePathLineEdit" type="LineEdit" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The AudioStream resource to be played.

Drop stream file to assign new stream."
editable = false
right_icon = ExtResource("2_mqqsk")
script = ExtResource("4_y74ps")

[node name="openFileButton" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
tooltip_text = "The AudioStream resource to be played."
text = "Assign"
icon = ExtResource("3_pbq54")
icon_alignment = 2
script = ExtResource("4_y74ps")

[node name="plyBtn" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
tooltip_text = "Plays Assigned Stream

Note: this will preview stream without any changes made"
icon = ExtResource("5_7xhud")

[node name="deleteBtn" type="Button" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
tooltip_text = "Delete Assigned Stream"
icon = ExtResource("5_jqkin")

[node name="HFlowContainer2" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HFlowContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Probability weight"
mouse_filter = 1
text = "Weight"

[node name="WeightSlider" type="HSlider" parent="VBoxContainer/HFlowContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
tooltip_text = "Probability weight"
step = 0.1
value = 1.0
scrollable = false

[node name="WeightInput" type="SpinBox" parent="VBoxContainer/HFlowContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
tooltip_text = "Probability weight"
step = 0.1
value = 1.0
alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="on_file_dropped" from="VBoxContainer/HFlowContainer/clipFilePathLineEdit" to="." method="on_drop_file"]
[connection signal="on_file_dropped" from="VBoxContainer/HFlowContainer/openFileButton" to="." method="on_drop_file"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/openFileButton" to="." method="on_assign_btn"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/plyBtn" to="." method="on_preview_stream"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/deleteBtn" to="." method="on_delete_element"]
[connection signal="value_changed" from="VBoxContainer/HFlowContainer2/WeightSlider" to="." method="on_weight_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/HFlowContainer2/WeightInput" to="." method="on_weight_input_changed"]
